# ppt_gen_agents

./: .gitignore  Dockerfile  Dockerfile.worker  README.md  agent_loop.py  batch.json  batch_job.py  cloud_run.tf  main.py  pyproject.toml  requirements.txt  schema.py  unit_message.proto
.github/workflows/: agents-deploy.yml
Agents/: agents_new.py  content_agents.py  data.py  prompts.py  schema.py  tools.py  utils.py  validation_agents.py
agents/: agents.py  agents_new.py  content_agents.py  data.py  prompts.py  schema.py  tools.py  utils.py
