[project]
name = "ppt-gen-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "google-api-python-client>=2.167.0",
    "google-genai>=1.11.0",
    "openai>=1.71.0",
    "openai-agents>=0.0.9",
    "pillow>=11.1.0",
    "pymongo>=4.12.0",
    "pytz>=2025.2",
    "uvicorn>=0.34.0",
    "youtube-transcript-api>=1.0.3",
]
